2017-06-12  Mario Pascucci  <mpascucci@gmail.com>

	* src/bricksnspace/ldrawlib/LDrawColor.java (getById): changed color name to avoid whitespace in name
	(readFromLibrary): changed color name to avoid whitespace in name

2017-04-20  Mario Pascucci  <mpascucci@gmail.com>

	* src/bricksnspace/ldrawlib/LDrawColor.java (isOfficialColor): checks if color is in official library

2017-04-19  Mario Pascucci  <mpascucci@gmail.com>

	* src/bricksnspace/ldrawlib/LDrawParser.java (parseColour): added code to detect color type
	(searchKeyword): search for a keyword in a string array
	* src/bricksnspace/ldrawlib/LDrawColor.java: now uses LDrawColorType enum
	* src/bricksnspace/ldrawlib/LDrawColorType.java: added color type enum

2017-04-14  Mario Pascucci  <mpascucci@gmail.com>

	* src/bricksnspace/ldrawlib/LdrTableModel.java: moved from BrickUtils

2017-04-13  Mario Pascucci  <mpascucci@gmail.com>

	* src/bricksnspace/ldrawlib/LDrawLibDB.java: table name is now public

2017-04-12  Mario Pascucci  <mpascucci@gmail.com>

	* src/bricksnspace/ldrawlib/LDrawLibDB.java (LDrawLibDB): new test for full text index
	(initDB): removed useless full text index test 

2017-04-11  Mario Pascucci  <mpascucci@gmail.com>

	* src/bricksnspace/ldrawlib/LDrawLibDB.java (getPart): Changed to return only one part, without warning or exception if there are duplicates

2017-04-07  Mario Pascucci  <mpascucci@gmail.com>

	* src/bricksnspace/ldrawlib/LDrawLibDB.java (initDB): moved checks/creation of index on startup

2017-03-31  Mario Pascucci  <mpascucci@gmail.com>

	* src/bricksnspace/ldrawlib/LDrawLibDB.java (endUpdate): changed order on create/delete index to avoid undesired open transaction commit
	(abortUpdate): changed order on create/delete index to avoid undesired open transaction commit
	(prepareUpdate): changed order on create/delete index to avoid undesired open transaction commit

2017-03-28  Mario Pascucci  <mpascucci@gmail.com>
